--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,10 @@
 # Changelog
 
-## [1.4] - 2019-10-15
+## [2.0.0] - 2019-06-11
+### Changed
+- Update React plugin to 0.2.0
+
+## [1.4] - 2018-10-15
 ### Changed
 - Update React plugin to 0.1.4
 
