--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,9 @@
 # Changelog
 
+## [Unreleased]
+### Changed
+- Update React plugin to 0.2.1
+
 ## [2.0.0] - 2019-06-11
 ### Changed
 - Update React plugin to 0.2.0
